// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Notifications Error 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-notification"
  >
    
    
    <div
      class="fd-message-strip fd-message-strip--error fd-message-strip--dismissible"
      role="alert"
    >
      
        
      <p
        class="fd-message-strip__text"
      >
        
          Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet.
        
      </p>
      
          
      <button
        aria-label="Close"
        class="fd-button fd-button--transparent fd-button--compact fd-message-strip__close"
      >
        
            
        <i
          class="sap-icon--decline"
        />
        
          
      </button>
      
    
    </div>
    
    
    <div
      class="fd-notification__body fd-notification__body--message"
    >
      
        
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/3.svg')"
      />
      
        
      <div
        class="fd-notification__content"
      >
        
          
        <div
          class="fd-notification__header"
        >
          
            
          <h2
            class="fd-notification__title fd-notification__title--unread"
          >
            You have new items
          </h2>
          
          
        </div>
        
          
        <p
          class="fd-notification__paragraph"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </p>
        
          
        <p
          class="fd-notification__footer"
        >
          
            
          <span
            class="fd-notification__footer-content"
          >
            SAP Analytics Cloud
          </span>
          
            
          <span
            class="fd-notification__separator"
          />
          
            
          <span
            class="fd-notification__footer-content"
          >
            7 minutes ago
          </span>
          
          
        </p>
        
        
      </div>
      
        
      <div
        class="fd-notification__actions"
      >
        
            
        <button
          class="fd-button fd-button--compact"
        >
          Open
        </button>
        
            
        <button
          aria-label="Close"
          class="fd-button fd-button--transparent fd-button--compact "
        >
          
                
          <i
            class="sap-icon--decline"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Notifications In Dialog 1`] = `
<div
  dir="ltr"
>
  

  <section
    class="fd-dialog-docs-static fd-dialog fd-dialog--active"
  >
    
    
    <div
      aria-labelledby="dialog-title-1"
      aria-modal="true"
      class="fd-dialog__content"
      role="dialog"
    >
      
        
      <header
        class="fd-dialog__header fd-bar fd-bar--header"
      >
        
            
        <div
          class="fd-bar__left"
        >
          
                
          <div
            class="fd-bar__element fd-bar__element--full-width"
          >
            
                    
            <h2
              class="fd-title fd-title--h5"
              id="dialog-title-1"
            >
              
                        Dialog with Notifications
                    
            </h2>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-bar__right"
        >
          
                
          <div
            class="fd-bar__element"
          >
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </header>
      
        
      <div
        class="fd-dialog__body fd-dialog__body--no-vertical-padding fd-dialog__body--no-horizontal-padding"
      >
        
            
        <div
          class="fd-notification fd-notification--in-dialog"
        >
          
                
          <div
            class="fd-notification__body"
          >
            
                    
            <span
              aria-label="John Doe"
              class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
              role="img"
              style="background-image: url('/assets/images/avatars/3.svg')"
            />
            
                    
            <div
              class="fd-notification__content"
            >
              
                        
              <div
                class="fd-notification__header"
              >
                
                            
                <div
                  class="fd-notification__indicator fd-notification__indicator--success"
                />
                
                            
                <h2
                  class="fd-notification__title fd-notification__title--unread"
                >
                  Your leave request has been accepted
                </h2>
                
                        
              </div>
              
                        
              <p
                class="fd-notification__paragraph"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              
                        
              <p
                class="fd-notification__footer"
              >
                
                            
                <span
                  class="fd-notification__footer-content"
                >
                  Long author name - SAP Analytics Cloud incididunt ut labore et dolore magna aliqua 
                </span>
                
                            
                <span
                  class="fd-notification__separator"
                />
                
                            
                <span
                  class="fd-notification__footer-content"
                >
                  7 minutes ago
                </span>
                
                        
              </p>
              
                    
            </div>
            
                    
            <div
              class="fd-notification__actions"
            >
              
                        
              <button
                class="fd-button fd-button--compact"
              >
                Open
              </button>
              
                        
              <button
                aria-label="Close"
                class="fd-button fd-button--transparent fd-button--compact "
              >
                
                            
                <i
                  class="sap-icon--decline"
                />
                
                        
              </button>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification fd-notification--in-dialog"
        >
          
                
          <div
            class="fd-notification__body"
          >
            
                    
            <span
              aria-label="John Doe"
              class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
              role="img"
              style="background-image: url('/assets/images/avatars/3.svg')"
            />
            
                    
            <div
              class="fd-notification__content"
            >
              
                        
              <div
                class="fd-notification__header"
              >
                
                            
                <div
                  class="fd-notification__indicator fd-notification__indicator--success"
                />
                
                            
                <h2
                  class="fd-notification__title fd-notification__title--unread"
                >
                  Your leave request has been accepted
                </h2>
                
                        
              </div>
              
                        
              <p
                class="fd-notification__paragraph"
              >
                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
              </p>
              
                        
              <p
                class="fd-notification__footer"
              >
                
                            
                <span
                  class="fd-notification__footer-content"
                >
                  Long author name - SAP Analytics Cloud incididunt ut labore et dolore magna aliqua 
                </span>
                
                            
                <span
                  class="fd-notification__separator"
                />
                
                            
                <span
                  class="fd-notification__footer-content"
                >
                  7 minutes ago
                </span>
                
                        
              </p>
              
                    
            </div>
            
                    
            <div
              class="fd-notification__actions"
            >
              
                        
              <button
                class="fd-button fd-button--compact"
              >
                Open
              </button>
              
                        
              <button
                aria-label="Close"
                class="fd-button fd-button--transparent fd-button--compact "
              >
                
                            
                <i
                  class="sap-icon--decline"
                />
                
                        
              </button>
              
                    
            </div>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </section>
  

</div>
`;

exports[`Storyshots Components/Notifications Information 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-notification"
  >
    
  
    <div
      class="fd-message-strip fd-message-strip--information fd-message-strip--dismissible"
      role="alert"
    >
      
      
      <p
        class="fd-message-strip__text"
      >
        
        Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet.
      
      </p>
      
       
      <button
        aria-label="Close"
        class="fd-button fd-button--transparent fd-button--compact fd-message-strip__close"
      >
        
        
        <i
          class="sap-icon--decline"
        />
        
      
      </button>
      
    
    </div>
    
    
    <div
      class="fd-notification__body fd-notification__body--message"
    >
      
        
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/3.svg')"
      />
      
        
      <div
        class="fd-notification__content"
      >
        
            
        <div
          class="fd-notification__header"
        >
          
                
          <h2
            class="fd-notification__title fd-notification__title--unread"
          >
            You have new items
          </h2>
          
            
        </div>
        
            
        <p
          class="fd-notification__paragraph"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </p>
        
            
        <p
          class="fd-notification__footer"
        >
          
            
          <span
            class="fd-notification__footer-content"
          >
            SAP Analytics Cloud
          </span>
          
            
          <span
            class="fd-notification__separator"
          />
          Just now
            
        </p>
        
        
      </div>
      
        
      <div
        class="fd-notification__actions"
      >
        
            
        <button
          class="fd-button fd-button--compact"
        >
          Open
        </button>
        
            
        <button
          aria-label="Close"
          class="fd-button fd-button--transparent fd-button--compact "
        >
          
                
          <i
            class="sap-icon--decline"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Notifications Mobile 1`] = `
<div
  dir="ltr"
>
  <div
    style="heigt: 200px; max-width: 20rem"
  >
    


    <div
      class="fd-notification fd-notification--mobile"
    >
      
    
      <div
        class="fd-notification__body"
      >
        
        
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/3.svg')"
        />
        
        
        <div
          class="fd-notification__content"
        >
          
            
          <div
            class="fd-notification__header"
          >
            
                
            <div
              class="fd-notification__indicator fd-notification__indicator--success"
            />
            
                
            <h2
              class="fd-notification__title fd-notification__title--unread"
            >
              Your leave request has been accepted
            </h2>
            
            
          </div>
          
            
          <p
            class="fd-notification__paragraph"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
          
            
          <p
            class="fd-notification__footer"
          >
            
                
            <span
              class="fd-notification__footer-content"
            >
              SAP Analytics Cloud
            </span>
            
                
            <span
              class="fd-notification__separator"
            />
            
                
            <span
              class="fd-notification__footer-content"
            >
              7 minutes ago
            </span>
            
            
          </p>
          
        
        </div>
        
        
        <div
          class="fd-notification__actions"
        >
          
               
          <div
            class="fd-popover fd-popover--right"
          >
            
                
            <div
              class="fd-popover__control"
            >
              
                    
              <button
                aria-controls="popoverA4"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Image label"
                class="fd-button fd-button--transparent"
                onclick="onPopoverClick('popoverA4');"
              >
                
                         
                <i
                  class="sap-icon--overflow"
                />
                
                    
              </button>
              
                
            </div>
            
                
            <div
              aria-hidden="true"
              class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
              id="popoverA4"
            >
              
                    
              <nav
                class="fd-menu"
                id=""
              >
                
                        
                <ul
                  class="fd-menu__list fd-menu__list--no-shadow"
                >
                  
                            
                  <li
                    class="fd-menu__item"
                  >
                    
                                
                    <a
                      class="fd-menu__link"
                    >
                      
                                    
                      <span
                        class="fd-menu__title"
                      >
                        Open
                      </span>
                      
                                
                    </a>
                    
                            
                  </li>
                  
                            
                  <li
                    class="fd-menu__item"
                  >
                    
                                
                    <a
                      class="fd-menu__link"
                    >
                      
                                    
                      <span
                        class="fd-menu__title"
                      >
                        Decline
                      </span>
                      
                                
                    </a>
                    
                            
                  </li>
                  
                        
                </ul>
                
                    
              </nav>
              
                
            </div>
            
            
          </div>
          
            
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent"
          >
            
                
            <i
              class="sap-icon--decline"
            />
            
            
          </button>
          
        
        </div>
        
    
      </div>
      

    </div>
    

  </div>
  

  <div
    style="heigt: 200px; max-width: 20rem"
  >
    
    
    <div
      class="fd-notification fd-notification--mobile fd-notification--group"
    >
      
        
      <ul
        class="fd-tabs fd-tabs--l"
        role="tablist"
      >
        
            
        <li
          aria-selected="true"
          class="fd-tabs__item"
          role="tab"
        >
          
                
          <a
            aria-controls="notifP300"
            class="fd-tabs__link"
            href="#notifP300"
          >
            
                    
            <span
              class="fd-tabs__tag"
            >
              By Date
            </span>
            
                
          </a>
          
            
        </li>
        
            
        <li
          class="fd-tabs__item"
          role="tab"
        >
          
                
          <a
            aria-controls="notifP301"
            class="fd-tabs__link"
            href="#notifP301"
          >
            
                    
            <span
              class="fd-tabs__tag"
            >
              By Type
            </span>
            
                
          </a>
          
            
        </li>
        
            
        <li
          class="fd-tabs__item"
          role="tab"
        >
          
                
          <a
            aria-controls="notifP302"
            class="fd-tabs__link"
            href="#notifP302"
          >
            
                    
            <span
              class="fd-tabs__tag"
            >
              By Priority
            </span>
            
                
          </a>
          
            
        </li>
        
        
      </ul>
      
        
      <div
        aria-expanded="true"
        class="fd-tabs__panel"
        id="notifP300"
        role="tabpanel"
      >
        
            
        <div
          class="fd-notification__group-header"
        >
          
                
          <button
            aria-label="arrow-down-button"
            class="fd-button fd-button--transparent"
            role="button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </button>
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                        
              <div
                class="fd-notification__indicator fd-notification__indicator--warning"
              />
              
                        
              <h2
                class="fd-notification__title fd-notification__title--unread"
              >
                Today (5)
              </h2>
              
                    
            </div>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__body"
        >
          
                
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
          >
            JD
          </span>
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                        
              <div
                class="fd-notification__indicator fd-notification__indicator--warning"
              />
              
                        
              <h2
                class="fd-notification__title fd-notification__title--unread"
              >
                You've got new item
              </h2>
              
                    
            </div>
            
                    
            <p
              class="fd-notification__paragraph"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
            
                    
            <p
              class="fd-notification__footer"
            >
              
                        
              <span
                class="fd-notification__footer-content"
              >
                SAP Teamm dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
              </span>
              
                        
              <span
                class="fd-notification__separator"
              />
              
                        
              <span
                class="fd-notification__footer-content"
              >
                7 minutes ago
              </span>
              
                    
            </p>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <div
              class="fd-popover fd-popover--right"
            >
              
                        
              <div
                class="fd-popover__control"
              >
                
                            
                <button
                  aria-controls="popoverA3"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Image label"
                  class="fd-button fd-button--transparent"
                  onclick="onPopoverClick('popoverA3');"
                >
                  
                                
                  <i
                    class="sap-icon--overflow"
                  />
                  
                            
                </button>
                
                        
              </div>
              
                        
              <div
                aria-hidden="true"
                class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                id="popoverA3"
              >
                
                            
                <nav
                  class="fd-menu"
                  id=""
                >
                  
                                
                  <ul
                    class="fd-menu__list fd-menu__list--no-shadow"
                  >
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Open
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Decline
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </nav>
                
                        
              </div>
              
                    
            </div>
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__body"
        >
          
                
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
            style="background-image: url('/assets/images/avatars/3.svg')"
          />
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                    
              <div
                class="fd-notification__indicator fd-notification__indicator--success"
              />
              
                    
              <h2
                class="fd-notification__title"
              >
                The title you've already read.
              </h2>
              
                    
            </div>
            
                    
            <p
              class="fd-notification__paragraph"
            >
              Lagna aliqua.
            </p>
            
                    
            <p
              class="fd-notification__footer"
            >
              
                        
              <span
                class="fd-notification__footer-content"
              >
                SAP Analytics Cloud very long author name to test truncate
              </span>
              
                        
              <span
                class="fd-notification__separator"
              />
              
                        
              <span
                class="fd-notification__footer-content"
              >
                7 minutes ago long long time ago ages ago years ago
              </span>
              
                    
            </p>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <div
              class="fd-popover fd-popover--right"
            >
              
                        
              <div
                class="fd-popover__control"
              >
                
                            
                <button
                  aria-controls="popoverA2"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Image label"
                  class="fd-button fd-button--transparent"
                  onclick="onPopoverClick('popoverA2');"
                >
                  
                                
                  <i
                    class="sap-icon--overflow"
                  />
                  
                            
                </button>
                
                        
              </div>
              
                        
              <div
                aria-hidden="true"
                class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                id="popoverA2"
              >
                
                            
                <nav
                  class="fd-menu"
                  id=""
                >
                  
                                
                  <ul
                    class="fd-menu__list fd-menu__list--no-shadow"
                  >
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Open
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </nav>
                
                        
              </div>
              
                    
            </div>
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="notifP301"
        role="tabpanel"
      >
        
            
        <div
          class="fd-notification__group-header"
        >
          
                
          <button
            aria-label="arrow-down-button"
            class="fd-button fd-button--transparent"
            role="button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </button>
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                        
              <div
                class="fd-notification__indicator fd-notification__indicator--warning"
              />
              
                        
              <h2
                class="fd-notification__title fd-notification__title--unread"
              >
                Today (5)
              </h2>
              
                    
            </div>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__body"
        >
          
                
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
          >
            JD
          </span>
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                        
              <div
                class="fd-notification__indicator fd-notification__indicator--warning"
              />
              
                        
              <h2
                class="fd-notification__title fd-notification__title--unread"
              >
                You've got new item
              </h2>
              
                    
            </div>
            
                    
            <p
              class="fd-notification__paragraph"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
            
                    
            <p
              class="fd-notification__footer"
            >
              
                        
              <span
                class="fd-notification__footer-content"
              >
                SAP Teamm dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
              </span>
              
                        
              <span
                class="fd-notification__separator"
              />
              
                        
              <span
                class="fd-notification__footer-content"
              >
                7 minutes ago
              </span>
              
                    
            </p>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <div
              class="fd-popover fd-popover--right"
            >
              
                        
              <div
                class="fd-popover__control"
              >
                
                            
                <button
                  aria-controls="popoverA42"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Image label"
                  class="fd-button fd-button--transparent"
                  onclick="onPopoverClick('popoverA42');"
                >
                  
                                
                  <i
                    class="sap-icon--overflow"
                  />
                  
                            
                </button>
                
                        
              </div>
              
                        
              <div
                aria-hidden="true"
                class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                id="popoverA42"
              >
                
                            
                <nav
                  class="fd-menu"
                  id=""
                >
                  
                                
                  <ul
                    class="fd-menu__list fd-menu__list--no-shadow"
                  >
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Open
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Decline
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </nav>
                
                        
              </div>
              
                    
            </div>
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__body"
        >
          
                
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
            style="background-image: url('/assets/images/avatars/3.svg')"
          />
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                    
              <div
                class="fd-notification__indicator fd-notification__indicator--success"
              />
              
                    
              <h2
                class="fd-notification__title"
              >
                The title you've already read.
              </h2>
              
                    
            </div>
            
                    
            <p
              class="fd-notification__paragraph"
            >
              Lagna aliqua.
            </p>
            
                    
            <p
              class="fd-notification__footer"
            >
              
                        
              <span
                class="fd-notification__footer-content"
              >
                SAP Analytics Cloud very long author name to test truncate
              </span>
              
                        
              <span
                class="fd-notification__separator"
              />
              
                        
              <span
                class="fd-notification__footer-content"
              >
                7 minutes ago long long time ago ages ago years ago
              </span>
              
                    
            </p>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <div
              class="fd-popover fd-popover--right"
            >
              
                        
              <div
                class="fd-popover__control"
              >
                
                            
                <button
                  aria-controls="popoverA245"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Image label"
                  class="fd-button fd-button--transparent"
                  onclick="onPopoverClick('popoverA245');"
                >
                  
                                
                  <i
                    class="sap-icon--overflow"
                  />
                  
                            
                </button>
                
                        
              </div>
              
                        
              <div
                aria-hidden="true"
                class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                id="popoverA245"
              >
                
                            
                <nav
                  class="fd-menu"
                  id=""
                >
                  
                                
                  <ul
                    class="fd-menu__list fd-menu__list--no-shadow"
                  >
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Open
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </nav>
                
                        
              </div>
              
                    
            </div>
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
        
      <div
        aria-expanded="false"
        class="fd-tabs__panel"
        id="notifP302"
        role="tabpanel"
      >
        
            
        <div
          class="fd-notification__group-header"
        >
          
                
          <button
            aria-label="arrow-down-button"
            class="fd-button fd-button--transparent"
            role="button"
          >
            
                    
            <i
              class="sap-icon--slim-arrow-down"
            />
            
                
          </button>
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                        
              <div
                class="fd-notification__indicator fd-notification__indicator--warning"
              />
              
                        
              <h2
                class="fd-notification__title fd-notification__title--unread"
              >
                Today (5)
              </h2>
              
                    
            </div>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__body"
        >
          
                
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
          >
            JD
          </span>
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                        
              <div
                class="fd-notification__indicator fd-notification__indicator--warning"
              />
              
                        
              <h2
                class="fd-notification__title fd-notification__title--unread"
              >
                You've got new item
              </h2>
              
                    
            </div>
            
                    
            <p
              class="fd-notification__paragraph"
            >
              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </p>
            
                    
            <p
              class="fd-notification__footer"
            >
              
                        
              <span
                class="fd-notification__footer-content"
              >
                SAP Teamm dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
              </span>
              
                        
              <span
                class="fd-notification__separator"
              />
              
                        
              <span
                class="fd-notification__footer-content"
              >
                7 minutes ago
              </span>
              
                    
            </p>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <div
              class="fd-popover fd-popover--right"
            >
              
                        
              <div
                class="fd-popover__control"
              >
                
                            
                <button
                  aria-controls="popoverA5"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Image label"
                  class="fd-button fd-button--transparent"
                  onclick="onPopoverClick('popoverA5');"
                >
                  
                                
                  <i
                    class="sap-icon--overflow"
                  />
                  
                            
                </button>
                
                        
              </div>
              
                        
              <div
                aria-hidden="true"
                class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                id="popoverA5"
              >
                
                            
                <nav
                  class="fd-menu"
                  id=""
                >
                  
                                
                  <ul
                    class="fd-menu__list fd-menu__list--no-shadow"
                  >
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Open
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Decline
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </nav>
                
                        
              </div>
              
                    
            </div>
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__body"
        >
          
                
          <span
            aria-label="John Doe"
            class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
            role="img"
            style="background-image: url('/assets/images/avatars/3.svg')"
          />
          
                
          <div
            class="fd-notification__content"
          >
            
                    
            <div
              class="fd-notification__header"
            >
              
                    
              <div
                class="fd-notification__indicator fd-notification__indicator--success"
              />
              
                    
              <h2
                class="fd-notification__title"
              >
                The title you've already read.
              </h2>
              
                    
            </div>
            
                    
            <p
              class="fd-notification__paragraph"
            >
              Lagna aliqua.
            </p>
            
                    
            <p
              class="fd-notification__footer"
            >
              
                        
              <span
                class="fd-notification__footer-content"
              >
                SAP Analytics Cloud very long author name to test truncate
              </span>
              
                        
              <span
                class="fd-notification__separator"
              />
              
                        
              <span
                class="fd-notification__footer-content"
              >
                7 minutes ago long long time ago ages ago years ago
              </span>
              
                    
            </p>
            
                
          </div>
          
                
          <div
            class="fd-notification__actions"
          >
            
                    
            <div
              class="fd-popover fd-popover--right"
            >
              
                        
              <div
                class="fd-popover__control"
              >
                
                            
                <button
                  aria-controls="popoverA43212"
                  aria-expanded="false"
                  aria-haspopup="true"
                  aria-label="Image label"
                  class="fd-button fd-button--transparent"
                  onclick="onPopoverClick('popoverA43212');"
                >
                  
                                
                  <i
                    class="sap-icon--overflow"
                  />
                  
                            
                </button>
                
                        
              </div>
              
                        
              <div
                aria-hidden="true"
                class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
                id="popoverA43212"
              >
                
                            
                <nav
                  class="fd-menu"
                  id=""
                >
                  
                                
                  <ul
                    class="fd-menu__list fd-menu__list--no-shadow"
                  >
                    
                                    
                    <li
                      class="fd-menu__item"
                    >
                      
                                        
                      <a
                        class="fd-menu__link"
                      >
                        
                                            
                        <span
                          class="fd-menu__title"
                        >
                          Open
                        </span>
                        
                                        
                      </a>
                      
                                    
                    </li>
                    
                                
                  </ul>
                  
                            
                </nav>
                
                        
              </div>
              
                    
            </div>
            
                    
            <button
              aria-label="Close"
              class="fd-button fd-button--transparent"
            >
              
                        
              <i
                class="sap-icon--decline"
              />
              
                    
            </button>
            
                
          </div>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Notifications No Avatar 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-notification"
  >
    
    
    <div
      class="fd-notification__body"
    >
      
        
      <div
        class="fd-notification__content fd-notification__content--no-avatar"
      >
        
            
        <div
          class="fd-notification__header"
        >
          
                
          <div
            class="fd-notification__indicator fd-notification__indicator--success"
          />
          
                
          <h2
            class="fd-notification__title fd-notification__title--unread"
          >
            Your leave request has been accepted
          </h2>
          
            
        </div>
        
            
        <p
          class="fd-notification__paragraph"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
        
            
        <p
          class="fd-notification__footer"
        >
          
                
          <span
            class="fd-notification__footer-content"
          >
            SAP Analytics Cloud
          </span>
          
                
          <span
            class="fd-notification__separator"
          />
          
                
          <span
            class="fd-notification__footer-content"
          >
            7 minutes ago
          </span>
          
            
        </p>
        
        
      </div>
      
        
      <div
        class="fd-notification__actions"
      >
        
            
        <button
          class="fd-button fd-button--compact"
        >
          Open
        </button>
        
            
        <button
          aria-label="Close"
          class="fd-button fd-button--transparent fd-button--compact "
        >
          
                
          <i
            class="sap-icon--decline"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Notifications Notification Group 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-notification fd-notification--group"
  >
    
    
    <ul
      class="fd-tabs fd-tabs--l"
      role="tablist"
    >
      
        
      <li
        aria-selected="true"
        class="fd-tabs__item"
        role="tab"
      >
        
            
        <a
          aria-controls="notifV550"
          class="fd-tabs__link"
          href="#notifV550"
        >
          
                
          <span
            class="fd-tabs__tag"
          >
            
                    By Date
                
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-tabs__item"
        role="tab"
      >
        
            
        <a
          aria-controls="notifV551"
          class="fd-tabs__link"
          href="#notifV551"
        >
          
                
          <span
            class="fd-tabs__tag"
          >
            
                    By Type
                
          </span>
          
            
        </a>
        
        
      </li>
      
        
      <li
        class="fd-tabs__item"
        role="tab"
      >
        
            
        <a
          aria-controls="notifV552"
          class="fd-tabs__link"
          href="#notifV552"
        >
          
                
          <span
            class="fd-tabs__tag"
          >
            
                    By Priority
                
          </span>
          
            
        </a>
        
        
      </li>
      
    
    </ul>
    
    
    <div
      aria-expanded="true"
      class="fd-tabs__panel"
      id="notifV550"
      role="tabpanel"
    >
      
        
      <div
        class="fd-notification__group-header"
      >
        
            
        <button
          aria-label="arrow-down-button"
          class="fd-button fd-button--compact fd-button--transparent"
          role="button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-down"
          />
          
            
        </button>
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                    
            <div
              class="fd-notification__indicator fd-notification__indicator--warning"
            />
            
                    
            <h2
              class="fd-notification__title fd-notification__title--unread"
            >
              Today (5)
            </h2>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Accept All
          </button>
          
                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-notification__body"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
        >
          JD
        </span>
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                    
            <div
              class="fd-notification__indicator fd-notification__indicator--warning"
            />
            
                    
            <h2
              class="fd-notification__title fd-notification__title--unread"
            >
              You've got new item
            </h2>
            
                
          </div>
          
                
          <p
            class="fd-notification__paragraph"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
          
                
          <p
            class="fd-notification__footer"
          >
            
                    
            <span
              class="fd-notification__footer-content"
            >
              SAP Team dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor consectetur adipiscing elit 
            </span>
            
                
          </p>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <div
            class="fd-popover fd-popover--right"
          >
            
                    
            <div
              class="fd-popover__control"
            >
              
                        
              <button
                aria-controls="popoverA5"
                aria-expanded="false"
                aria-haspopup="true"
                aria-label="Image label"
                class="fd-button fd-button--transparent fd-button--compact"
                onclick="onPopoverClick('popoverA5');"
              >
                
                            
                <i
                  class="sap-icon--overflow"
                />
                
                        
              </button>
              
                    
            </div>
            
                    
            <div
              aria-hidden="true"
              class="fd-popover__body fd-popover__body--right fd-popover__body--no-arrow"
              id="popoverA5"
            >
              
                        
              <nav
                class="fd-menu"
                id=""
              >
                
                            
                <ul
                  class="fd-menu__list fd-menu__list--no-shadow"
                >
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Accept
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Decline
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                                
                  <li
                    class="fd-menu__item"
                  >
                    
                                    
                    <a
                      class="fd-menu__link"
                    >
                      
                                        
                      <span
                        class="fd-menu__title"
                      >
                        Forward
                      </span>
                      
                                    
                    </a>
                    
                                
                  </li>
                  
                            
                </ul>
                
                        
              </nav>
              
                    
            </div>
            
                
          </div>
          

                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-notification__body"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/3.svg')"
        />
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                
            <div
              class="fd-notification__indicator fd-notification__indicator--success"
            />
            
                
            <h2
              class="fd-notification__title"
            >
              The title you've already read.
            </h2>
            
                
          </div>
          
                
          <p
            class="fd-notification__paragraph"
          >
            Lagna aliqua.
          </p>
          
                
          <p
            class="fd-notification__footer"
          >
            
                    
            <span
              class="fd-notification__footer-content"
            >
              SAP Analytics Cloud very long author name to test truncate
            </span>
            
                    
            <span
              class="fd-notification__separator"
            />
            
                    
            <span
              class="fd-notification__footer-content"
            >
              7 minutes ago long long time ago ages ago years ago
            </span>
            
                
          </p>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Open
          </button>
          

                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-notification__body"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/3.svg')"
        />
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                
            <div
              class="fd-notification__indicator fd-notification__indicator--error"
            />
            
                
            <h2
              class="fd-notification__title fd-notification__title--unread"
            >
              Your leave request has been rejected. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
            </h2>
            
                
          </div>
          
                
          <p
            class="fd-notification__paragraph"
          >
            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
          </p>
          
                
          <p
            class="fd-notification__footer"
          >
            
                    
            <span
              class="fd-notification__footer-content"
            >
              SAP Analytics Cloud
            </span>
            
                    
            <span
              class="fd-notification__separator"
            />
            
                    
            <span
              class="fd-notification__footer-content"
            >
              7 minutes ago m dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
            </span>
            
                
          </p>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Open
          </button>
          
                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-notification__limit"
      >
        
            
        <h1
          class="fd-notification__limit--title"
        >
          There are 30 more notifications
        </h1>
        
            
        <p
          class="fd-notification__limit--description"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-expanded="false"
      class="fd-tabs__panel"
      id="notifV551"
      role="tabpanel"
    >
      
        
      <div
        class="fd-notification__group-header"
      >
        
            
        <button
          aria-label="arrow-down-button"
          class="fd-button fd-button--compact fd-button--transparent"
          role="button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-down"
          />
          
            
        </button>
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                    
            <div
              class="fd-notification__indicator fd-notification__indicator--warning"
            />
            
                    
            <h2
              class="fd-notification__title fd-notification__title--unread"
            >
              Today (5)
            </h2>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Accept All
          </button>
          
                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-notification__body"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/3.svg')"
        />
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                
            <div
              class="fd-notification__indicator fd-notification__indicator--success"
            />
            
                
            <h2
              class="fd-notification__title"
            >
              The title you've already read.
            </h2>
            
                
          </div>
          
                
          <p
            class="fd-notification__paragraph"
          >
            Lagna aliqua.
          </p>
          
                
          <p
            class="fd-notification__footer"
          >
            
                    
            <span
              class="fd-notification__footer-content"
            >
              SAP Analytics Cloud very long author name to test truncate
            </span>
            
                    
            <span
              class="fd-notification__separator"
            />
            
                    
            <span
              class="fd-notification__footer-content"
            >
              7 minutes ago long long time ago ages ago years ago
            </span>
            
                
          </p>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Open
          </button>
          

                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    
    
    <div
      aria-expanded="false"
      class="fd-tabs__panel"
      id="notifV552"
      role="tabpanel"
    >
      
        
      <div
        class="fd-notification__group-header"
      >
        
            
        <button
          aria-label="arrow-down-button"
          class="fd-button fd-button--compact fd-button--transparent"
          role="button"
        >
          
                
          <i
            class="sap-icon--slim-arrow-down"
          />
          
            
        </button>
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                    
            <div
              class="fd-notification__indicator fd-notification__indicator--warning"
            />
            
                    
            <h2
              class="fd-notification__title fd-notification__title--unread"
            >
              Today (5)
            </h2>
            
                
          </div>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Accept All
          </button>
          
                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
        
      <div
        class="fd-notification__body"
      >
        
            
        <span
          aria-label="John Doe"
          class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
          role="img"
          style="background-image: url('/assets/images/avatars/3.svg')"
        />
        
            
        <div
          class="fd-notification__content"
        >
          
                
          <div
            class="fd-notification__header"
          >
            
                
            <div
              class="fd-notification__indicator fd-notification__indicator--success"
            />
            
                
            <h2
              class="fd-notification__title"
            >
              The title you've already read.
            </h2>
            
                
          </div>
          
                
          <p
            class="fd-notification__paragraph"
          >
            Lagna aliqua.
          </p>
          
                
          <p
            class="fd-notification__footer"
          >
            
                    
            <span
              class="fd-notification__footer-content"
            >
              SAP Analytics Cloud very long author name to test truncate
            </span>
            
                    
            <span
              class="fd-notification__separator"
            />
            
                    
            <span
              class="fd-notification__footer-content"
            >
              7 minutes ago long long time ago ages ago years ago
            </span>
            
                
          </p>
          
            
        </div>
        
            
        <div
          class="fd-notification__actions"
        >
          
                
          <button
            class="fd-button fd-button--compact"
          >
            Open
          </button>
          

                
          <button
            aria-label="Close"
            class="fd-button fd-button--transparent fd-button--compact "
          >
            
                    
            <i
              class="sap-icon--decline"
            />
            
                
          </button>
          
            
        </div>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Notifications Primary 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-notification"
  >
    
    
    <div
      class="fd-notification__body"
    >
      
        
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/3.svg')"
      />
      
        
      <div
        class="fd-notification__content"
      >
        
            
        <div
          class="fd-notification__header"
        >
          
                
          <div
            class="fd-notification__indicator fd-notification__indicator--success"
          />
          
                
          <h2
            class="fd-notification__title fd-notification__title--unread"
          >
            Your leave request has been accepted
          </h2>
          
            
        </div>
        
            
        <p
          class="fd-notification__paragraph"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        </p>
        
            
        <p
          class="fd-notification__footer"
        >
          
                
          <span
            class="fd-notification__footer-content"
          >
            Long author name - SAP Analytics Cloud incididunt ut labore et dolore magna aliqua 
          </span>
          
                
          <span
            class="fd-notification__separator"
          />
          
                
          <span
            class="fd-notification__footer-content"
          >
            7 minutes ago
          </span>
          
            
        </p>
        
        
      </div>
      
        
      <div
        class="fd-notification__actions"
      >
        
            
        <button
          class="fd-button fd-button--compact"
        >
          Open
        </button>
        
            
        <button
          aria-label="Close"
          class="fd-button fd-button--transparent fd-button--compact "
        >
          
                
          <i
            class="sap-icon--decline"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;

exports[`Storyshots Components/Notifications Warning 1`] = `
<div
  dir="ltr"
>
  <div
    class="fd-notification"
  >
    
    
    <div
      class="fd-message-strip fd-message-strip--warning fd-message-strip--dismissible"
      role="alert"
    >
      
      
      <p
        class="fd-message-strip__text"
      >
        
        Vivamus sagittis diam in vehicula lobortis sapien arcu mattis erat vel aliquet.
      
      </p>
      
      
      <button
        aria-label="Close"
        class="fd-button fd-button--transparent fd-button--compact fd-message-strip__close"
      >
        
        
        <i
          class="sap-icon--decline"
        />
        
      
      </button>
      
    
    </div>
    
    
    <div
      class="fd-notification__body fd-notification__body--message"
    >
      
       
      <span
        aria-label="John Doe"
        class="fd-avatar fd-avatar--xs fd-avatar--circle fd-avatar--thumbnail"
        role="img"
        style="background-image: url('/assets/images/avatars/3.svg')"
      />
      
        
      <div
        class="fd-notification__content"
      >
        
            
        <div
          class="fd-notification__header"
        >
          
              
          <h2
            class="fd-notification__title fd-notification__title--unread"
          >
            You have new items
          </h2>
          
            
        </div>
        
            
        <p
          class="fd-notification__paragraph"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        </p>
        
            
        <p
          class="fd-notification__footer"
        >
          
                
          <span
            class="fd-notification__footer-content"
          >
            Tom Norton Beam
          </span>
          
                
          <span
            class="fd-notification__separator"
          />
          
                
          <span
            class="fd-notification__footer-content"
          >
            7 minutes ago
          </span>
          
            
        </p>
        
        
      </div>
      
        
      <div
        class="fd-notification__actions"
      >
        
            
        <button
          class="fd-button fd-button--compact"
        >
          Open
        </button>
        
            
        <button
          aria-label="Close"
          class="fd-button fd-button--transparent fd-button--compact "
        >
          
                
          <i
            class="sap-icon--decline"
          />
          
            
        </button>
        
        
      </div>
      
    
    </div>
    

  </div>
  

</div>
`;
